--- a/db.yaml
+++ b/db.yaml
@@ -2,7 +2,7 @@
   hosts: db
   become: yes
   vars:
-      login_hosts: mysql.daws93.com
+      login_hosts: 172.31.84.25
   tasks:
   - name: Install Mysql server
     ansible.builtin.dnf:
