--- a/db.yaml
+++ b/db.yaml
@@ -3,6 +3,10 @@
   become: yes
   vars:
       login_hosts: db.nsrinformation.cloud
+  vars_prompt:
+  - name: mysql-root-password
+    prompt: Please enter password my root password
+    private: no
   tasks:
   - name: Install Mysql server
     ansible.builtin.dnf:
@@ -26,3 +30,7 @@
   - name: print output
     ansible.builtin.debug:
       msg: "output: {{ mysql_connection_output }}"
+
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{mysql_root_password }}"
+    when: mysql_connection_output.is failed is true
