--- a/db.yaml
+++ b/db.yaml
@@ -21,7 +21,7 @@
   -  name: check password setup
      community.mysql.mysql_info:
         login_user: root
-        login_password: ExpenseApp@1
+        login_password: "{{ mysql_root_password}}"
         login_hosts: "{{ login_hosts }}"
         filter: version
         ignore_errors: true
