--- a/db.yaml
+++ b/db.yaml
@@ -2,7 +2,7 @@
   hosts: db
   become: yes
   vars:
-      login_hosts: db.nsrinformation.cloud
+      login_host: db.nsrinformation.cloud
   vars_prompt:
   - name: mysql_root_password
     prompt: Please enter password my root password
@@ -18,14 +18,15 @@
       name: mysqld
       state: started
       enabled: yes
+
   -  name: check password setup
      community.mysql.mysql_info:
         login_user: root
         login_password: "{{ mysql_root_password }}"
-        login_hosts: "{{ login_hosts }}"
+        login_host: "{{ login_host }}"
         filter: version
-        ignore_errors: true
-        registery: mysql_connection_output
+     ignore_errors: yes
+     registery: mysql_connection_output
 
   - name: print output
     ansible.builtin.debug:
