--- a/db.yaml
+++ b/db.yaml
@@ -19,7 +19,7 @@
       state: started
       enabled: yes
 
-  - name: check password setup
+  - name: check Db setup
     community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"
