--- a/db.yaml
+++ b/db.yaml
@@ -19,7 +19,7 @@
        state: started
        enabled: yes
 
-  - name: check Db setup
+  - name: Db setup
     community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"
