--- a/db.yaml
+++ b/db.yaml
@@ -17,7 +17,7 @@
     ansible.builtin.service:
        name: mysqld
        state: started
-       enabled: yes
+      #  enabled: yes
 
   - name: Db setup
     community.mysql.mysql_info:
