--- a/db.yaml
+++ b/db.yaml
@@ -17,14 +17,14 @@
     ansible.builtin.service:
        name: mysqld
        state: started
-      #  enabled: yes
+       enabled: yes
 
   - name: Db setup
     community.mysql.mysql_info:
-      login_user: root
-      login_password: "{{ mysql_root_password }}"
-      login_host: "{{ login_host }}"
-      filter: version
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
+        login_host: "{{ login_host }}"
+        filter: version
     ignore_errors: yes
     registery: mysql_connection_output
 
