--- a/db.yaml
+++ b/db.yaml
@@ -19,19 +19,19 @@
        state: started
        enabled: yes
 
-  - name: Db setup
-    community.mysql.mysql_info:
-        login_user: root
-        login_password: "{{ mysql_root_password }}"
-        login_host: "{{ login_host }}"
-        filter: version
-    ignore_errors: yes
-    registery: mysql_connection_output
+  # - name: Db setup
+  #   community.mysql.mysql_info:
+  #       login_user: root
+  #       login_password: "{{ mysql_root_password }}"
+  #       login_host: "{{ login_host }}"
+  #       filter: version
+  #   ignore_errors: yes
+  #   registery: mysql_connection_output
 
-  - name: print output
-    ansible.builtin.debug:
-      msg: "output: {{ mysql_connection_output }}"
+  # - name: print output
+  #   ansible.builtin.debug:
+  #     msg: "output: {{ mysql_connection_output }}"
 
-  - name: setup root password
-    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
-    when: mysql_connection_output.is failed is true
+  # - name: setup root password
+  #   ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+  #   when: mysql_connection_output.is failed is true
