--- a/db.yaml
+++ b/db.yaml
@@ -19,12 +19,12 @@
        state: started
        enabled: yes
 
-  - name: Db setup
+  - name: check Db connection
     community.mysql.mysql_info:
-        login_user: root
-        login_password: "{{ mysql_root_password }}"
-        login_host: "{{ login_host }}"
-        filter: version
+      login_user: root
+      login_password: "{{ mysql_root_password }}"
+      login_host: "{{ login_host }}"
+      filter: version
     ignore_errors: yes
     registery: mysql_connection_output
 
