--- a/db.yaml
+++ b/db.yaml
@@ -15,9 +15,9 @@
 
   - name: start and mysql server
     ansible.builtin.service:
-       name: mysqld
-       state: started
-       enabled: yes
+      name: mysqld
+      state: started
+      enabled: yes
 
   - name: check Db connection
     community.mysql.mysql_info:
@@ -28,10 +28,10 @@
     ignore_errors: yes
     registery: mysql_connection_output
 
-  # - name: print output
-  #   ansible.builtin.debug:
-  #     msg: "output: {{ mysql_connection_output }}"
+  - name: print output
+    ansible.builtin.debug:
+      msg: "output: {{ mysql_connection_output }}"
 
-  # - name: setup root password
-  #   ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
-  #   when: mysql_connection_output.is failed is true
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_connection_output.is failed is true
