--- a/db-prac.yaml
+++ b/db-prac.yaml
@@ -18,9 +18,10 @@
       name: mysqld
       state: started
       enabled: yes
-      
+
   - name: install mysql dependencies
     ansible.builtin.pip:
+    name:
     - PyMySQL
     - cryptography
     executable: pip3.9
