--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -19,7 +19,7 @@
       name: expense
 
   - name: create app dir
-    ansible.builtin.command:
+    ansible.builtin.file:
       path: /app
       state: directory
   
