--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -34,3 +34,8 @@
       dest: /app
       remote_src: yes
 
+  - name: install npm dependencies
+    ansible.builtin.command: npm install
+    args:
+      chdir: /app
+
