--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -2,6 +2,8 @@
   hosts: backend.nsrinformation.cloud
   become: yes
   vars:
+      login_host: db.nsrinformation.cloud
+      login_password: ExpenseApp@1
   tasks:
   - name: disable default node js
     ansible.builtin.command: dnf module disable nodejs -y
@@ -39,3 +41,22 @@
     args:
       chdir: /app
 
+  - name: backend service
+    ansible.builtin.copy:
+    src: backend.service
+    dest: /etc/systemd/system/backend.service
+
+  - name: install mysql dependencies
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      - cryptography
+      executable: pip3.9
+
+  - name: import data into mysql
+    community.mysql.mysql_db:
+      login_user: root  
+      login_password: "{{ login_password }}"
+      login_host: "{{ login_host }}"
+      target: /app/schema/backend.sql
+      state: dump
