--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -56,11 +56,11 @@
       - cryptography
       executable: pip3.9
 
-  # - name: import data into mysql
-  #   community.mysql.mysql_db:
-  #     login_user: root  
-  #     login_password: "{{ login_password }}"
-  #     login_host: "{{ login_host }}"
-  #     target: /app/schema/backend.sql
-  #     state: import
-  #     name: all
+  - name: import data into mysql
+    community.mysql.mysql_db:
+    -?  login_user: root  
+      login_password: "{{ login_password }}"
+      login_host: "{{ login_host }}"
+      target: /app/schema/backend.sql
+      state: import
+      name: all
