--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -19,7 +19,7 @@
     - nodejs
     - mysql
 
-  - name: add user
+  - name: create expense user
     ansible.builtin.user: 
       name: expense
 
@@ -61,6 +61,10 @@
       login_user: root  
       login_password: "{{ login_password }}"
       login_host: "{{ login_host }}"
-      # target: /app/schema/backend.sql
-      # state: import
-      # name: all   
+      target: /app/schema/backend.sql
+      state: import
+      name: all   
+  
+  - name: demon reload
+    ansible.builtin.systemd_service:
+      daemon_relod: yes
