--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -1,41 +1,41 @@
-- name: configure backend
-  hosts: backend.nsrinformation.cloud
+- name: configure backend server
   become: yes
+  hosts: backend
   vars:
-      login_host: db.nsrinformation.cloud
-      login_password: ExpenseApp@1
+    login_host: backend.nsrinformation.cloud
+    login_password: ExpenseApp@1
   tasks:
-  - name: disable default node js
+  - name: disable default nodejs
     ansible.builtin.command: dnf module disable nodejs -y
 
   - name: enable nodejs:20
     ansible.builtin.command: dnf module enable nodejs:20 -y
-  
+
   - name: install nodejs
-    ansible.builtin.dnf:
-       name: "{{ item }}"
-       state: installed
+    ansible.builtin.dnf: # only works for Redhat family
+      name: "{{ item }}"
+      state: installed
     loop:
     - nodejs
     - mysql
 
   - name: create expense user
-    ansible.builtin.user: 
+    ansible.builtin.user:
       name: expense
 
-  - name: create app dir
+  - name: create app directory
     ansible.builtin.file:
       path: /app
       state: directory
-  
-  - name: download backend command
-    ansible.builtin.get_url: 
+
+  - name: download backend code
+    ansible.builtin.get_url:
       url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
       dest: /tmp/backend.zip
 
-  - name: unzip backendcode
+  - name: unzip backend code
     ansible.builtin.unarchive:
-      src: /tmp/backend.zip
+      src: /tmp/backend.zip # by default checks in ansible server
       dest: /app
       remote_src: yes
 
@@ -44,27 +44,36 @@
     args:
       chdir: /app
 
-  - name: backend service
+  - name: copy backend service
     ansible.builtin.copy:
       src: backend.service
       dest: /etc/systemd/system/backend.service
 
-  - name: install mysql dependencies
-    ansible.builtin.pip:
+  - name: install python mysql dependencies
+    ansible.builtin.pip: 
       name:
-      - PyMySQL
+      - PyMySQL # to connect MySQL DB from Ansible
       - cryptography
-      executable: pip3.9
+      executable: pip3.9 # pip3.11 if python version is 3.11
 
   - name: import data into mysql
     community.mysql.mysql_db:
-      login_user: root  
+      login_user: root
       login_password: "{{ login_password }}"
       login_host: "{{ login_host }}"
       target: /app/schema/backend.sql
       state: import
-      name: all   
-  
-  - name: demon reload
+      name: all
+
+  - name: daemon reload
     ansible.builtin.systemd_service:
-      daemon_relod: yes
+      daemon_reload: true
+
+  - name: start and enable backend service
+    ansible.builtin.service:
+      name: backend
+      state: started
+      enabled: yes
+
+      
+  
