--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -2,7 +2,7 @@
   become: yes
   hosts: backend
   vars:
-    login_host: backend.nsrinformation.cloud
+    login_host: db.nsrinformation.cloud
     login_password: ExpenseApp@1
   tasks:
   - name: disable default nodejs
