--- a/backend-prac.yaml
+++ b/backend-prac.yaml
@@ -1,5 +1,4 @@
-- name: configure backend server
-  become: yes
+
   hosts: backend
   vars:
     login_host: db.nsrinformation.cloud
@@ -12,7 +11,8 @@
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
-    ansible.builtin.dnf: # only works for Redhat family
+    ansible.builtin.dnf:- name: configure backend server
+  become: yes # only works for Redhat family
       name: "{{ item }}"
       state: installed
     loop:
